<?xml version="1.0"?>
<package format="2">
  <name>elevation_mapping</name>
  <version>0.4.0</version>
  <description>Generates an elevation map from distance measurements and robot pose information.</description>
  <maintainer email="xuechengxu@zju.edu.cn">Xuecheng Xu</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ZJU-Robotics-Lab/GEM</url>
  <url type="bugtracker">https://github.com/ZJU-Robotics-Lab/GEM/issues</url>
  <author email="xuechengxu@zju.edu.cn">Xuecheng Xu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>slam_msg</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>kindr</depend>
  <depend>kindr_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
</package>
